reduce opacity of keys on press

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -10,9 +10,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
   numeric_keyboard:
     path: ../
-  bouncing_widget: ^2.0.0
+
+  bouncing_widget:
+    git:
+      https://github.com/jamesnicholls04/bouncing_widget
 
   cupertino_icons: ^0.1.3
 
