--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,5 @@
 name: numeric_keyboard
+publish_to: none
 description: Flutter plugin to display a simple numeric keyboard on Android & iOS.
 version: 1.0.0
 homepage: https://github.com/huextrat/numeric_keyboard
@@ -8,7 +9,10 @@ environment:
 
 dependencies:
 
-  bouncing_widget: ^2.0.0
+  bouncing_widget:
+    git:
+      https://github.com/jamesnicholls04/bouncing_widget
+
   flutter:
     sdk: flutter
 
